--- a/card/index.html
+++ b/card/index.html
@@ -26,7 +26,7 @@
 			<div class="next"><img class="arrow next-arrow" src="./icons/wave-oval/chevron-right-svgrepo-com.svg" alt="next"></div>
 		</div>
 		<div id="text">
-			<h1 class="name-photo"><b>N</b>ame of photo</h1>
+			<h1 class="name-photo"><b>T</b>he real photo Republic of Karelia</h1>
 			<p class="description-photo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit id aspernatur ipsum eius odit veritatis iusto totam exercitationem debitis ab eos corporis voluptates perferendis at blanditiis, asperiores quasi nihil nisi?</p>
 		</div>
 		<div class="card-footer">
