--- a/card/index.html
+++ b/card/index.html
@@ -11,9 +11,8 @@
 		<div class="coordinator"></div>
 		<div id="image-holder">
 			<img id="image" src="./img/photo2.jpg"></img>
-			<div class="image-zoomer"><img class="arrow prew-arrow"src="./icons/wave-oval/zoom-in-svgrepo-com.svg" alt="zoom"></div>
-		</div>
-		<div class="navigation">
+			<!-- <div class="image-zoomer"><img class="arrow prew-arrow"src="./icons/wave-oval/zoom-in-svgrepo-com.svg" alt="zoom"></div> -->
+			<div class="navigation">
 			<div class="prev"><img class="arrow prew-arrow"src="./icons/wave-oval/chevron-left-svgrepo-com.svg" alt="prew"></div>
 			<div class="position-viewer">
 				<div class="block"></div>
@@ -25,14 +24,16 @@
 			</div>
 			<div class="next"><img class="arrow next-arrow" src="./icons/wave-oval/chevron-right-svgrepo-com.svg" alt="next"></div>
 		</div>
+		</div>
+		
 		<div id="text">
 			<h1 class="name-photo"><b>T</b>he real photo Republic of Karelia</h1>
-			<p class="description-photo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit id aspernatur ipsum eius odit veritatis iusto totam exercitationem debitis ab eos corporis voluptates perferendis at blanditiis, asperiores quasi nihil nisi?</p>
+			<p class="description-photo">Lorem ipsum dolor sit amet, consectetur <b>tracking</b> elit. Sit id aspernatur ipsum eius odit veritatis iusto totam exercitationem debitis ab eos corporis voluptates perferendis at blanditiis, asperiores quasi nihil nisi?</p>
 		</div>
 		<div class="card-footer">
 			<div class="tag-box">
 			<span><b>#</b>Karelia</span>
-			<span><b>#</b>Onega</span>
+			<span><b>#</b>Ruskeala</span>
 			<span><b>#</b>Nature</span>
 		</div>
 		<div class="time-box">2 <b>days</b> ago</div>
